Add config folder

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,3 +11,8 @@
       path: ./.**
       create: true
       exclude: [ .git ]
+
+    ~/.config:
+      glob: true
+      path: ./.config/**
+      create: true
